fix navbar overlapping issue (#15)
* made navbar component

* fixed font size

* fixed overlapping issue

* added logo

---------

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,7 +48,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #F2F2F2;
     --foreground: #ededed;
   }
 }
